<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainContainerHere"
    tools:context=".MainActivity">

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:id="@+id/appBar">-->

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:title="SPaint"-->
<!--            app:titleTextColor="@color/white"-->
<!--            app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"-->
<!--            android:id="@+id/toolbarMain"/>-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->

    <LinearLayout
        android:id="@+id/linear"
        android:elevation="10dp"
        android:padding="2dp"
        android:background="#23000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/undoIb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/undo"
                android:text="@string/undo" />

            <ImageButton
                android:id="@+id/redoIb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/redo"
                android:text="@string/redo" />

            <ImageButton
                android:id="@+id/saveIb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/save"
                android:text="@string/save" />

            <ImageButton
                android:id="@+id/colorIb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/palette"
                android:text="@string/color" />

            <ImageButton
                android:id="@+id/strokeIb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/brush"
                android:text="@string/stroke" />

            <ImageButton
                android:id="@+id/eregarIb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/earase"
                android:text="@string/erager" />

            <ImageButton
                android:id="@+id/clearAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/clearall"
                android:text="@string/clear_all" />

            <ImageButton
                android:id="@+id/drawShapes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/draw"
                android:text="@string/draw_shapes" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:id="@+id/linearforstrock"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_size"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeBarForStroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearForEarager"
        android:layout_below="@+id/linearforstrock"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eraser_size"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeBarForErager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:id="@+id/linearContainer"
        android:layout_below="@id/linearForEarager">

        <LinearLayout
            android:weightSum="3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:background="@color/gray"
            android:layout_centerInParent="true"
            android:id="@+id/linearforCustom">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.example.paintappforportfolio.CustomViewPaint
                android:id="@+id/draw_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linear"
        android:background="#23000000"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayForShapes">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/rectangle"
            android:textSize="23sp"
            android:background="@drawable/border"
            android:paddingEnd="28dp"
            android:paddingStart="12dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:id="@+id/rectangleTv"
            android:textColor="@color/black"/>

    </LinearLayout>

</RelativeLayout>