<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/mainContainerForCanvasSelector"
    tools:context=".CanvasSelectorActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/choose_canvas"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/background"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/colorIb"
                android:src="@drawable/baseline_invert_colors_24"
                android:background="@color/white"/>

            </LinearLayout>


        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/colorTv"
                    android:gravity="center_horizontal"
                    android:text="@string/choose_background_color"
                    android:textSize="18sp"
                    android:background="@color/white"/>


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="20dp"
                android:background="#808080"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="0dp"
        app:cardElevation="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Pick canvas"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@color/white"
                                app:cardElevation="7.5dp"
                                android:elevation="8dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:id="@+id/ScreenFitIv"
                                    android:src="@drawable/ninejemsixteen" />

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_gravity="bottom"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:gravity="center"
                                android:text="Display size" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@color/white"
                                app:cardElevation="7.5dp"
                                android:elevation="8dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/oneJemOneIv"
                                    android:src="@drawable/onejemone" />

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_gravity="bottom"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:gravity="center"
                                android:text="@string/_1536_x_1536_n_1_1" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@color/white"
                                app:cardElevation="7.5dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/fourJemThree"
                                    android:src="@drawable/fourjemthree" />

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:gravity="center"
                                android:text="@string/_2048_x_1536_n_4_3" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@color/white"
                                app:cardElevation="7.5dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/threeJemTwoIv"
                                    android:src="@drawable/threejemtwo" />

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:gravity="center"
                                android:text="@string/_1200_x_800_n_3_2" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@color/white"
                                app:cardElevation="7.5dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/sixteenJemNineIv"
                                    android:src="@drawable/sixteenjemnine" />

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:gravity="center"
                                android:text="@string/_1920_x_1080_n_16_9" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@color/white"
                                app:cardElevation="7.5dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/nineJemSixteenIv"
                                    android:src="@drawable/ninejemsixteen" />

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:gravity="center"
                                android:text="@string/_1680_x_1050_n_16_10" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@color/white"
                                app:cardElevation="7.5dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/customIv"
                                    android:src="@drawable/ninejemsixteen" />

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:gravity="center"
                                android:text="@string/_1080_x_2131_n_custom" />

                        </LinearLayout>

                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#808080"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="Continue"
            android:backgroundTint="#00BCD4"
            android:id="@+id/continueBtn"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:foregroundGravity="bottom"
                android:gravity="center|start">

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>



    </ScrollView>
</LinearLayout>























